# pico_epaper

./: CMakeLists.txt  EPD_2in13_V4.c  LICENSE  README.md  image.c  main.c
lib/Fonts/: battery16.c  battery32.c
